deployments/k8s/op-bot-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: op-bot-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: op-bot-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-bot-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: op-bot-service
  template:
    metadata:
      labels:
        app: op-bot-service
    spec:
      imagePullSecrets:
        - name: op-bot-registry
      containers:
        - name: op-bot
          image: solte/op-bot:0.1.3
          ports:
            - containerPort: 8080
