deployments/k8s/postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-database
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: pg-database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg-database
  template:
    metadata:
      labels:
        app: pg-database
    spec:
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgres-volume-claim
      containers:
        - name: pg-database
          image: postgres:15.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: pg-database
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
